--- a/src/js/commons/leftnavibar.css
+++ b/src/js/commons/leftnavibar.css
@@ -1,20 +1,27 @@
 
 .navibox {
     text-align: -webkit-center;
-    width: 100px;
-    height: auto;
-    background-color: #10479A;
+    width: 60px;
+    align-items: center;
+    
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    height: 100%;
+	background:#10479A; 
 
 }
 
 .navibox div {
 
     margin: 40px 0px;
-    width: 40px;
+    width: 70%;
     height: 40px;
     background-size: contain;
     background-repeat: no-repeat;
     background-color: #10479A;
+
 
 }
 
