--- a/src/js/login/css/login.css
+++ b/src/js/login/css/login.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family: 'IBM Plex Sans KR', sans-serif,'Noto Sans KR', sans-serif !important;
 }
 
 h1 {
@@ -12,12 +12,12 @@ h1 {
     /* align-items: center; */
     font-size: 20px;
     margin: auto;
-    width: 360px;
+    width: 400px;
 }
 
 .save-and-find {
     font-size: 16px;
-    width: 340px;
+    width: 400px;
 }
 
 
@@ -39,6 +39,7 @@ h1 {
     width: 80px;
     height: 80px;
     vertical-align: text-bottom;
+    cursor: pointer;
 }
 
 button {
@@ -49,7 +50,7 @@ button {
     font-size: 20px;
 }
 
-button:hover {
+.button-group button:hover {
     background-color: rgba(255, 195, 56, 1);
 }
 
@@ -64,9 +65,12 @@ button:hover {
 
 .find-group label {
     padding: 0px 0px 0px 25px;
+    cursor: pointer;
 }
 
 .save-group label {
     padding-left: 5px;
+    cursor: pointer;
+
 }
 
