--- a/src/js/login/css/social-login.css
+++ b/src/js/login/css/social-login.css
@@ -1,4 +1,5 @@
 .social {
+    margin-left: -100px;
     margin-top: 50px;
     font-size: 14px;
     color: gray;
@@ -6,6 +7,7 @@
 }
 
 .social-group {   
+    
     width: 250px;
     /* text-align: center; */
     
@@ -20,6 +22,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position-x: center;
+    cursor: pointer;
 }
 
 
