디렉토리 변경

--- a/src/commons/Header.module.css
+++ b/src/commons/Header.module.css
@@ -41,10 +41,9 @@ body {
     font-size: 1.2em;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: url("/src/images/HIGH\ CARE.png");
+    background-image: url("/public/images/HIGH\ CARE.png");
     width: 200px;
     margin-left: 80px;
-    /* margin-bottom: 40px; */
 }
 
 .HeaderBtn{
