관리자페이지 권한설정페이지

--- a/src/commons/Header.module.css
+++ b/src/commons/Header.module.css
@@ -62,7 +62,7 @@ body {
 .logininput input {
     flex-direction: column;
     display: flex;
-    align-items: flex-end;
+    align-items: end;
     border-radius: 6px;
 }
 
