--- a/src/pages/approval/Box/ApprovalBox.css
+++ b/src/pages/approval/Box/ApprovalBox.css
@@ -10,6 +10,7 @@
     width: 1520px;
     height: 50px;
     padding: 10px 12px;
+    margin-left: 20px;
     justify-content: center;
     align-items: center;
 
@@ -40,13 +41,19 @@
     font-weight: 600;
 }
 
+.apvTopMenuUl li.clicked {
+    background: #FFC338;
+    color: #000;
+    font-weight: 600;
+}
+
 /* 수신함 */
-.apvTopMenu-r-ul{
+.apvTopmenuUl2{
     display: flex;
     text-align: center; 
 }
 
-.apvTopMenu-r-ul li{
+.apvTopmenuUl2 li{
     display: flex;
     width: 380px;
     height: 80px;
@@ -60,7 +67,13 @@
     align-items: center;
 }
 
-.apvTopMenu-r-ul li:hover{
+.apvTopmenuUl2 li:hover{
+    background: #FFC338;
+    color: #000;
+    font-weight: 600;
+}
+
+.apvTopmenuUl2 li.clicked {
     background: #FFC338;
     color: #000;
     font-weight: 600;
@@ -71,14 +84,14 @@
     border-collapse: collapse;
     margin: 30px ;
     width: 1520px;
-    height: 820px;
+    max-height: 820px;
     border: #7B7B7B solid 1px;
     text-align: center;
     font-size: 24px;
 }
 
 .apvBoxresultTable th{
-    height: 40px;
+    height: 50px;
     background-color: #EEE;
     border: #7B7B7B solid 1px;
 }
@@ -112,7 +125,7 @@
 }
 
 .apvBoxresultTable td{
-    height: 25px;
+    /* height: 25px; */
     flex-direction: column;
     justify-content: center;
     border: #7B7B7B solid 1px;
