--- a/src/pages/bulletin/BulletinNavStyle.module.css
+++ b/src/pages/bulletin/BulletinNavStyle.module.css
@@ -71,6 +71,7 @@ section {
     color: #000;
     text-align: center;
     font-size: 24px;
+    margin-bottom: 20px;
 }
 
 .apv_navibox-ul li:hover{
@@ -90,6 +91,8 @@ section {
     color: #FFF;
     text-align: center;
     font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .apv_navibox_emp{
