--- a/src/pages/approval/Exp/ApprovalExp.css
+++ b/src/pages/approval/Exp/ApprovalExp.css
@@ -121,6 +121,33 @@
     border-right: none;
 }
 
+
+.apvContentDetailExp1Total2{
+    grid-column: 1 / span 8;
+    display: grid;
+    grid-template-columns: repeat(2, 750px);
+    height: 60px;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around;
+    background: #EEE; 
+    border-top: 1px solid #7B7B7B;
+    border-bottom: 1px solid #7B7B7B;
+}
+
+.apvContentDetailExp1Total2 > div {
+    display: flex;
+    border-right: 1px solid #7B7B7B;
+    border-bottom: 1px solid #7B7B7B;
+    height: 60px;
+    flex-direction: column;
+    justify-content: center;
+    font-weight: 600;
+}
+.apvContentDetailExp1Total2 > div:nth-child(2n) {
+    border-right: none;
+}
+
 .apvContentTitleExp1-2{
     grid-column: 1 / span 8;
     display: grid;
