--- a/src/pages/mypage/profile.css
+++ b/src/pages/mypage/profile.css
@@ -3,8 +3,8 @@ body {
   }
   
   /* 회원가입 CSS*/
-  .bscd-form {
-    width: 400px;
+  .profile-form {
+    width: 900px;
     background-color: #10479A;
     margin-left: auto;
     margin-right: auto;
@@ -12,9 +12,13 @@ body {
     margin-bottom: 180px;
     border-radius: 5px;
     padding: 30px;
+    height: 780px;
+    /* display: flex; */
+    /* 프로필사진 칸 가운데 */
+
   }
   
-  .bscd-form h3 {
+  .profile-form h3 {
     color: white;
     font-size: 13px;
   }
@@ -97,25 +101,25 @@ body {
     font-size: 14px;
   }
   
-  #email_id {
+  /* #email_id {
     font-size: 14px;
     width: 110px;
     border: none;
     border-radius: 5px;
     padding: 15px 10px;
     margin-right: 10px;
-  }
+  } */
   
-  #email_domain {
+  /* #email_domain {
     font-size: 14px;
     width: 100px;
     border: none;
     border-radius: 5px;
     padding: 15px 10px;
     margin: 0 10px;
-  }
+  } */
   
-  .email-form select {
+  /* .email-form select {
     width: 100px;
     font-size: 14px;
     background: #fff
@@ -130,8 +134,8 @@ body {
     cursor: default;
     margin: 0;
     font-family: Dotum, "돋움", Helvetica, sans-serif;
-  }
-  
+  } */
+/*   
   #user_self {
     font-size: 14px;
     width: 380px;
@@ -139,7 +143,7 @@ body {
     border-radius: 5px;
     padding: 15px 10px;
     margin-bottom: 10px;
-  }
+  } */
 
   .addressbutton{
     font-size: 14px;
@@ -152,25 +156,20 @@ body {
 
   }
   
-  .submit-btn {
-    font-size: 14px;
-    background-color: #FFC338;
-    color: white;
-    width: 100%;
-    border-radius: 5px;
-    padding: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    border: none;
+
+  .block-test{
+    display: inline-block;
+    width: 150px;
+    height: 150px;
+    background-color: white;
   }
-  
-  .reset-btn {
-    font-size: 14px;
-    background-color: #FFC338;
-    color: white;
-    width: 100%;
-    border-radius: 5px;
-    margin-top: 5px;
-    padding: 10px;
-    border: none;
+
+  .double {
+    display: flex;
+    height: 1000px;
   }
+
+  .content2{
+    margin-left: 60px;
+  }
+
