--- a/src/pages/approval/Biz/ApprovalBiz.css
+++ b/src/pages/approval/Biz/ApprovalBiz.css
@@ -1,6 +1,6 @@
 
 
-.apv-content-title{
+.apvContentTitle{
     grid-column: 1 / span 8;
     display: grid;
     grid-template-columns: 375px 1125px;
@@ -9,7 +9,7 @@
     justify-content: space-around;
     border-bottom: 1px solid #7B7B7B;
 }
-.apv-content-title > div{
+.apvContentTitle > div{
 
     display: flex;
     border-right: 1px solid #7B7B7B;
@@ -19,18 +19,18 @@
     background: #EEE;
 }
 
-.apv-content-title .column2{
+.apvContentTitle .column2{
     height: 50px;
     font-size: 24px;
 }
 
-.apv-content-title > div:nth-child(2n) {
+.apvContentTitle > div:nth-child(2n) {
     border-right: none;
     background: none;
 }
 
 
-.apv-content-detail{
+.apvContentDetail{
     grid-column: 1 / span 8;
     display: flex;
     height: 60px;
@@ -43,7 +43,7 @@
 }
 
 
-.apv-content-detail-coment{
+.apvContentDetailComent{
     padding: 30px;
     grid-column: 1 / span 8;
     min-height: 300px;
@@ -55,7 +55,7 @@
 
 
 
-.apv-content-detail2{
+.apvContentDetail2{
     grid-column: 1 / span 8;
     display: flex;
     height: 40px;
@@ -66,7 +66,7 @@
     border-bottom: 1px solid #7B7B7B;
 }
 
-.apv-content-detail-coment2{
+.apvContentDetailComent2{
     grid-column: 1 / span 8;
     padding: 30px;
     min-height: 600px;
@@ -133,7 +133,7 @@
 
 
 
-.apv-content-title-biz3{
+.apvContentTitle-biz3{
     grid-column: 1 / span 8;
     display: grid;
     grid-template-columns: 375px 225px 225px 30px 225px 225px 195px;
@@ -143,17 +143,17 @@
     justify-content: space-around;
     border-bottom: 1px solid #7B7B7B;
 }
-.apv-content-title-biz3 > div{
+.apvContentTitle-biz3 > div{
     display: flex;
     height: 80px;
     flex-direction: column;
     justify-content: center;
 }
-.apv-content-title-biz3 .column1{
+.apvContentTitle-biz3 .column1{
     background: #EEE; 
 }
 
-.apv-content-title-biz3 > div:nth-child(1){
+.apvContentTitle-biz3 > div:nth-child(1){
     border-right: 1px solid #7B7B7B;
 }
 
