--- a/src/pages/approval/Approval.css
+++ b/src/pages/approval/Approval.css
@@ -490,6 +490,10 @@ textarea {
     margin-left:  50px;
 }
 
+.checkbox {
+    /* margin-left: 20px; */
+    height: 30px;
+}
 
 footer{
     margin: 50px;
