#4 리액트-지출 출장경비정산서 작성중. (db조회 오류 상태)

--- a/src/pages/approval/Exp/ApprovalExp.css
+++ b/src/pages/approval/Exp/ApprovalExp.css
@@ -185,6 +185,7 @@
 .apvContentTitleExp1-3 > div{
     display: flex;
     border-right: 1px solid #7B7B7B;
+    border-bottom: 1px solid #7B7B7B;
     height: 60px;
     flex-direction: column;
     justify-content: center;
