#3 리액트-전자결재 메인페이지 (마이 양식 -> 최근 결제 양식으로 변경)

--- a/src/pages/approval/Approval.css
+++ b/src/pages/approval/Approval.css
@@ -235,8 +235,8 @@ section {
 .apvMainMy > div {
     flex-direction: column;
     display: flex;
-    width: 330px;
-    height: 70px;
+    width: 300px;
+    height: 30px;
     padding: 10px 12px;
     justify-content: center;
     align-items: center;
@@ -247,7 +247,7 @@ section {
     
 }
 
-.apvMainMy div > div:last-child {
+.apvMainMy > div:last-child {
     border-bottom: 1px solid #7B7B7B;    
 }
 
