--- a/src/pages/approval/Approval.css
+++ b/src/pages/approval/Approval.css
@@ -311,21 +311,22 @@ section {
     background: #10479A;
     color: #FFF;
     list-style-type:none;
-
 }
 
 .apvMainListRList > div {
     flex-direction: column;
     display: flex;
     width: 300px;
-    height: 50px;
+    height: 40px;
     padding: 10px 12px;
     justify-content: center;
     align-items: center;
     text-align: center;
     border: 1px solid #7B7B7B;
-    border-bottom: none;   
+    /* border-bottom: none;    */
     list-style-type:none;
+        border-radius: 6px;
+    margin-top: 10px;
     }
 
 .apvMainListRList > div:last-child {
@@ -519,6 +520,10 @@ textarea {
 .checkbox {
     /* margin-left: 20px; */
     height: 30px;
+}
+
+.dragged-item {
+    background: #FFC338;
 }
 
 footer{
