--- a/src/pages/approval/Approval.css
+++ b/src/pages/approval/Approval.css
@@ -5,14 +5,14 @@ a {
 
 body {
     font-family: NanumGothic;
-    list-style-type:none;
+    list-style-type: none;
 }
 
 section {
     font-size: 20px;
 }
 
-.containerApv{
+.containerApv {
     width: 1500px;
     padding: 0px 50px 50px 50px;
     width: auto;
@@ -20,19 +20,19 @@ section {
 }
 
 /* 왼쪽 메뉴바 */
-.leftMenu{
+.leftMenu {
     display: flex;
 }
 
-/* 왼쪽 아이콘 메뉴바 */ 
-.leftMenu1{
+/* 왼쪽 아이콘 메뉴바 */
+.leftMenu1 {
     background: #10479A;
     width: 80px;
     height: 1000px;
 }
 
 /* 왼쪽 카테고리 메뉴바*/
-.leftMenu2{
+.leftMenu2 {
     height: 1000px;
     border-color: #000;
     border-right-style: solid;
@@ -41,13 +41,13 @@ section {
     border-bottom-width: 1px;
 }
 
-.mainLogo>img{
+.mainLogo>img {
     margin: 20px 0px 34px 26px;
     width: 205px;
     height: 36px;
 }
 
-.apvMainTitle{
+.apvMainTitle {
     color: #000;
     text-align: center;
     font-size: 40px;
@@ -55,15 +55,15 @@ section {
     margin-bottom: 30px;
 }
 
-.apvNaviBox{
+.apvNaviBox {
     width: 247px;
     height: 768px;
     padding: 12px;
-    border-right : #000;
+    border-right: #000;
     box-sizing: border-box
 }
 
-.apvNaviBoxTop{
+.apvNaviBoxTop {
     display: flex;
     width: 197px;
     height: 50px;
@@ -78,12 +78,12 @@ section {
     font-size: 24px;
 }
 
-.apvNaviBoxUl li:hover{
+.apvNaviBoxUl li:hover {
     background-color: #EEE;
     font-weight: 600;
 }
 
-.apvNaviBoxMainTitle{
+.apvNaviBoxMainTitle {
     display: flex;
     width: 197px;
     height: 34px;
@@ -97,14 +97,16 @@ section {
     font-size: 20px;
 }
 
-.apvNaviBoxEmp{
+.apvNaviBoxEmp {
     height: 10px;
 }
-.apvNaviBoxUl{
+
+.apvNaviBoxUl {
     padding: 0;
     margin-top: 20px;
 }
-.apvNaviBoxUl>li{
+
+.apvNaviBoxUl>li {
     display: flex;
     width: 197px;
     height: 26px;
@@ -117,11 +119,11 @@ section {
 
 /* 전자결재 메인 */
 
-.apvMain{
-    display:inline-flex;
+.apvMain {
+    display: inline-flex;
 }
 
-.apvMainToday{
+.apvMainToday {
 
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -134,7 +136,7 @@ section {
     height: auto;
 }
 
-.apvMainToday .header{
+.apvMainToday .header {
     display: grid;
     align-items: center;
     grid-column: 1 / span 2;
@@ -145,35 +147,35 @@ section {
     border-bottom: #10479A solid 4px;
     font-size: 24px;
     font-weight: bold;
-} 
+}
 
-.apvMainToday .cell1{
+.apvMainToday .cell1 {
     display: grid;
     align-items: center;
     height: 53px;
     border-right: #10479A solid 4px;
 }
 
-.apvMainBox{
+.apvMainBox {
     width: 900px;
     height: 160px;
     margin-left: 180px;
 }
 
-.apvMainBox>span{
-    border: solid 1px ;
+.apvMainBox>span {
+    border: solid 1px;
 }
 
-.apvMainBoxRightBox{
+.apvMainBoxRightBox {
     display: flex;
 }
 
-.apvMainBoxRight{
+.apvMainBoxRight {
     display: flex;
     flex-direction: column;
     margin: 30px 10px;
     border-radius: 6px;
-    border: 4px solid #10479A ;
+    border: 4px solid #10479A;
     width: 200px;
     height: 140px;
     padding: 10px 12px;
@@ -181,8 +183,8 @@ section {
     align-items: flex-start;
 }
 
-.apvMainBoxRight .row1{
-    text-align:center;
+.apvMainBoxRight .row1 {
+    text-align: center;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -190,10 +192,11 @@ section {
     width: 200px;
     font-size: 24px;
     font-weight: 500;
-    border-bottom: 2px solid #10479A ;
+    border-bottom: 2px solid #10479A;
 }
-.apvMainBoxRight .row2{
-    text-align:center;
+
+.apvMainBoxRight .row2 {
+    text-align: center;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -202,37 +205,37 @@ section {
     font-size: 24px;
 }
 
-.apvMainList{
+.apvMainList {
     margin: 30px 30px 30px 30px;
-    display:inline-flex;
+    display: inline-flex;
 }
 
-.apvMainListMy{
-    margin-right: 200px;   
+.apvMainListMy {
+    margin-right: 200px;
 }
 
-.apvMainListLTitle{
+.apvMainListLTitle {
     display: flex;
     width: 300px;
     height: 40px;
     padding: 10px 12px;
     margin-bottom: 30px;
-    text-align:center;
+    text-align: center;
     justify-content: center;
     align-items: center;
     border-radius: 6px;
-    border: 4px solid #10479A ;
+    border: 4px solid #10479A;
     background: #10479A;
     color: #FFF;
     font-size: 24px;
     font-weight: 600;
 }
 
-.apvMainListRmList{
-    display:inline-flex;
+.apvMainListRmList {
+    display: inline-flex;
 }
 
-.apvMainMy > div {
+.apvMainMy>div {
     flex-direction: column;
     display: flex;
     width: 300px;
@@ -241,14 +244,14 @@ section {
     justify-content: center;
     align-items: center;
     text-align: center;
-    border: 1px solid #7B7B7B;    
-    border-bottom: none;    
-    list-style-type:none;
-    
+    border: 1px solid #7B7B7B;
+    border-bottom: none;
+    list-style-type: none;
+
 }
 
-.apvMainMy > div:last-child {
-    border-bottom: 1px solid #7B7B7B;    
+.apvMainMy>div:last-child {
+    border-bottom: 1px solid #7B7B7B;
 }
 
 
@@ -274,32 +277,32 @@ section {
 } */
 
 
-.apvMainListRTitle{
+.apvMainListRTitle {
     display: flex;
     width: auto;
     height: 40px;
     padding: 10px 12px;
-    text-align:center;
+    text-align: center;
     justify-content: center;
     align-items: center;
     border-radius: 6px;
-    border: 4px solid #10479A ;
+    border: 4px solid #10479A;
     background: #10479A;
     color: #FFF;
     font-size: 24px;
     font-weight: 600;
     margin-bottom: 40px;
-    }
-
-.apvMainListRmList{
-    display:inline-flex;
 }
 
-.apvMainListRListEmp{
+.apvMainListRmList {
+    display: inline-flex;
+}
+
+.apvMainListRListEmp {
     width: 50px;
 }
 
-.apvMainListRList .listTitle{
+.apvMainListRList .listTitle {
     flex-direction: column;
     display: flex;
     width: 300px;
@@ -310,10 +313,14 @@ section {
     text-align: center;
     background: #10479A;
     color: #FFF;
-    list-style-type:none;
+    list-style-type: none;
 }
 
-.apvMainListRList > div {
+.apvMainListRList > div > div:hover {
+    background: #FFC338;
+}
+
+.apvMainListRList>div {
     flex-direction: column;
     display: flex;
     width: 300px;
@@ -324,17 +331,17 @@ section {
     text-align: center;
     border: 1px solid #7B7B7B;
     /* border-bottom: none;    */
-    list-style-type:none;
-        border-radius: 6px;
+    list-style-type: none;
+    border-radius: 6px;
     margin-top: 10px;
-    }
+}
 
-.apvMainListRList > div:last-child {
+.apvMainListRList>div:last-child {
     border-bottom: 1px solid #7B7B7B;
-    }
+}
 
-    /* 결재 상단바*/
-.apvTopBar{
+/* 결재 상단바*/
+.apvTopBar {
     display: flex;
     width: auto;
     height: 55px;
@@ -342,12 +349,12 @@ section {
     align-items: center;
 }
 
-.apvTopBar>div{
+.apvTopBar>div {
     margin-left: 50px;
 
 }
 
-.apvTopBar>div>button{
+.apvTopBar>div>button {
     width: auto;
     height: auto;
     min-height: 40px;
@@ -358,24 +365,27 @@ section {
     border: 0.5px solid #7B7B7B;
 }
 
-.apvTopBar>div>button.summit{
-    background: #FFC338;
-}
-.apvTopBar>div>button.emergencyActive{
+.apvTopBar>div>button.summit {
     background: #FFC338;
 }
 
-.apvLineCount{
+.apvTopBar>div>button.emergencyActive {
+    background: #FFC338;
+}
+
+.apvLineCount {
     display: flex;
     justify-content: flex-end;
     margin-right: 20px;
 }
-.apvLineCount>button{
+
+.apvLineCount>button {
     width: auto;
     height: 40px;
 }
+
 /* 문서 타이틀 */
-.apvApvTitle{
+.apvApvTitle {
     display: flex;
     color: #000;
     text-align: center;
@@ -384,15 +394,16 @@ section {
     width: 1500px;
     height: 64px;
     padding: 10px 12px;
-    margin-top: 50px;;
+    margin-top: 50px;
+    ;
     margin-bottom: 50px;
     justify-content: center;
     align-items: center;
 }
 
 /* 결재라인 */
-.apvApvLine{
-    
+.apvApvLine {
+
     float: right;
     margin-right: 20px;
     width: 600px;
@@ -402,9 +413,10 @@ section {
     align-items: center;
     justify-content: flex-end;
 }
-.apvApvLineBox{
+
+.apvApvLineBox {
     width: 150px;
-    text-align:center;
+    text-align: center;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -420,6 +432,7 @@ section {
     justify-content: center;
     align-items: center;
 }
+
 .apvApvLineBox .row2 {
     display: flex;
     height: 115px;
@@ -429,7 +442,8 @@ section {
     border-right: 1px solid #7B7B7B;
     border-left: 1px solid #7B7B7B;
 }
-.apvApvLineBox .row3{
+
+.apvApvLineBox .row3 {
     display: flex;
     height: 30px;
     background: #EEEEEE;
@@ -439,7 +453,9 @@ section {
     border: 1px solid #7B7B7B;
 }
 
-.apvApvLineBox .row4, .row7, .row10 {
+.apvApvLineBox .row4,
+.row7,
+.row10 {
     display: flex;
     height: 30px;
     background: #EEEEEE;
@@ -451,7 +467,10 @@ section {
     justify-content: center;
     align-items: center;
 }
-.apvApvLineBox .row5, .row8, .row11{
+
+.apvApvLineBox .row5,
+.row8,
+.row11 {
     display: flex;
     height: 115px;
     text-align: center;
@@ -459,7 +478,10 @@ section {
     justify-content: center;
     border-right: 1px solid #7B7B7B;
 }
-.apvApvLineBox .row6, .row9, .row12{
+
+.apvApvLineBox .row6,
+.row9,
+.row12 {
     display: flex;
     height: 30px;
     background: #EEEEEE;
@@ -471,7 +493,7 @@ section {
     border-bottom: 1px solid #7B7B7B;
 }
 
-.apvContent{
+.apvContent {
     width: 1500px;
     display: inline-grid;
     margin-top: 40px;
@@ -480,7 +502,7 @@ section {
     /* grid-auto-rows/: 60px; */
     border: #7B7B7B solid 1px;
     font-size: 24px;
-} 
+}
 
 
 
@@ -495,7 +517,8 @@ textarea {
     resize: none;
     overflow: hidden;
 }
-.input1{
+
+.input1 {
     font-family: NanumGothic;
     font-size: 24px;
     border: none;
@@ -503,7 +526,8 @@ textarea {
     resize: none;
     padding-left: 30px;
 }
-.input2{
+
+.input2 {
     font-family: NanumGothic;
     font-size: 24px;
     border: none;
@@ -513,8 +537,8 @@ textarea {
     margin-right: 30px;
 }
 
-.labelName{
-    margin-left:  50px;
+.labelName {
+    margin-left: 50px;
 }
 
 .checkbox {
@@ -522,10 +546,24 @@ textarea {
     height: 30px;
 }
 
-footer{
+.apvMainListRList .dragList {
+    cursor: pointer;
+    transition: background-color 0.1s ease-in-out;
+}
+.apvMainListRList .dragList .childDiv{
+    cursor: pointer;
+    transition: background-color 0.1s ease-in-out;
+}
+
+.apvMainListRList .dragList:hover,
+.apvMainListRList .dragList.active {
+    background-color: #FFC338;
+}
+
+footer {
     margin: 50px;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    }
+}
