--- a/src/pages/approval/Approval.css
+++ b/src/pages/approval/Approval.css
@@ -316,7 +316,7 @@ section {
     list-style-type: none;
 }
 
-.apvMainListRList > div > div:hover {
+.apvMainListRList>div>div:hover {
     background: #FFC338;
 }
 
@@ -451,6 +451,7 @@ section {
     border: 1px solid #7B7B7B;
     border-bottom: none;
 }
+
 .apvApvLineBox .row4 {
     display: flex;
     height: 30px;
@@ -502,30 +503,78 @@ section {
 }
 
 /* 결재라인 트리뷰 */
-.apvLineTreeContainer{
-    display: flex;
-}
 
-.apvLineTree1{
+.apvLineTreeContainer {
     display: flex;
     
 }
 
-.apvLineTreeBox{
+.apvLineTree1 {
+    display: flex;
+
+}
+
+.apvLineTreeBox {
+    flex-direction: column;
+    margin-left: auto;
     display: flex;
     border: 1px solid #7B7B7B;
     border-radius: 6px;
+    width: 300px;
+    height: 300px;
+    text-align: center;
+    align-items: center
+}
+.apvLineTreeBoxTitle{
+    margin-top: 10px;
+}
+.apvLineTreeSelected{
+    display: flex;
+    margin: 10px;
+    height: 50px;
+    cursor: pointer;
+    transition: background-color 0.1s ease-in-out;
+}
+/* .apvLineTreeSelected2:hover,
+.apvLineTreeSelected2.active {
+    background-color: #FFC338; */
+/* } */
+
+.apvLineTreeSelected1{
+    display: flex;
+    width: 100px;
+    margin-right: 10px;
+    border: 1px solid #7B7B7B;
+    border-radius: 6px;
+    justify-content: center;
+    align-items: center
+}
+.apvLineTreeSelected2{
+    display: flex;
+    width: 150px;
+    margin-right: 10px;
+    border: 1px solid #7B7B7B;
+    border-radius: 6px;
+    justify-content: center;
+    align-items: center
 }
 
-.apvLineTreeSelected{
-    border: 1px solid #7B7B7B;
+
+.apvLineTreeContainer>button {
+    position: relative;
+    width: auto;
+    height: 10px;
+    min-height: 40px;
+    margin: 0px 20px 0px 0px;
+    padding: 0px 12px;
+    font-size: 16px;
     border-radius: 6px;
 }
 
-.apvLineTreeContainer >button{
-    position:relative;
-    width: auto;
-    height: 10px;
+.apvBtn1{
+    position: relative;
+    width: 5px;
+    height: 5px;
     min-height: 40px;
     margin: 0px 20px 0px 0px;
     padding: 0px 12px;
@@ -591,7 +640,8 @@ textarea {
     cursor: pointer;
     transition: background-color 0.1s ease-in-out;
 }
-.apvMainListRList .dragList .childDiv{
+
+.apvMainListRList .dragList .childDiv {
     cursor: pointer;
     transition: background-color 0.1s ease-in-out;
 }
