--- a/src/pages/bulletin/Bullentin.module.css
+++ b/src/pages/bulletin/Bullentin.module.css
@@ -38,7 +38,11 @@
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   min-height: 500px;
+  width: 80vw;
 }
+/* .content_main_main img{
+  width: 50vw;
+} */
 .content_info{
   font-size: 16px;
   margin-bottom: 20px;
