--- a/src/pages/chatting/ChattingMain.module.css
+++ b/src/pages/chatting/ChattingMain.module.css
@@ -5,6 +5,7 @@
     border-radius: 5px;
     box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.2);
     background-color: white;
+    z-index: 9999;
 }
 
 .chattingHeader {
