--- a/src/pages/chatting/ChattingRoomList.module.css
+++ b/src/pages/chatting/ChattingRoomList.module.css
@@ -7,9 +7,10 @@
     width: 390px;
     height: 90px;
     border-bottom: 0.5px solid lightgrey;
+    display: flex;
 }
 
-.profile-icon {
+.profileIcon {
     width: 87px;
     height: 87px;
     float: left;
@@ -19,8 +20,13 @@
 
 .chattingRoomInfo {
     display: flex;
-    height: 87px;
-    padding-top: 15px;
-    padding-left: 5px;
+    height: 85px;
+    padding-top: 3px;
+    padding-left: 15px;
     font-size: small;
+    text-align: center;
+}
+
+.roomInfoText {
+    padding-left: 10px;
 }
