--- a/src/pages/mypage/profile.css
+++ b/src/pages/mypage/profile.css
@@ -6,13 +6,14 @@ body {
   .profile-form {
     width: 900px;
     background-color: #10479A;
-    margin-left: auto;
+    /* margin-left: auto; */
+    margin-left: 400px;
     margin-right: auto;
-    margin-top: 40px;
+    margin-top: 100px;
     margin-bottom: 180px;
     border-radius: 5px;
     padding: 30px;
-    height: 780px;
+    height: 580px;
     /* display: flex; */
     /* 프로필사진 칸 가운데 */
 
@@ -166,10 +167,18 @@ body {
 
   .double {
     display: flex;
-    height: 1000px;
+    height: 610px;
   }
 
   .content2{
     margin-left: 60px;
+  }
+
+  .profileRegistration{
+    /* width: 100px; */
+    /* height: 50px; */
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
   }
 
