댓글 페이징 및 게시판 css 수정

--- a/src/pages/bulletin/Bullentin.module.css
+++ b/src/pages/bulletin/Bullentin.module.css
@@ -144,6 +144,11 @@ td{
     border-radius: 0 5px 5px 0;
     cursor: pointer;
     font-size: 20px;
+    margin-top: 0px;
+    margin-left: 0px;
+    background-image: url("/public/images/search.png");
+    background-size: cover;
+    /* background-position: center; */
   }
   
  .wrap{
