--- a/src/pages/bulletin/Bullentin.module.css
+++ b/src/pages/bulletin/Bullentin.module.css
@@ -50,6 +50,25 @@
   font-size: 20px;
   margin-top: 10px;
   margin-bottom: 10px;
+  width : 400px;
+  min-height: 40px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #f4f4f4;
+  border : none;
+  resize: none;
+  cursor: default;
+}
+.comment_mod{
+  font-size: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width : 400px;
+  min-height: 40px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #f4f4f4;
+  resize: none;
 }
 .write_bulletin{
   text-align: end;
