--- a/src/pages/approval/Approval.css
+++ b/src/pages/approval/Approval.css
@@ -454,6 +454,7 @@ section {
 
 .apvApvLineBox .row4 {
     display: flex;
+    flex-wrap: wrap;
     height: 30px;
     background: #EEEEEE;
     text-align: center;
@@ -581,6 +582,17 @@ section {
     font-size: 16px;
     border-radius: 6px;
 }
+
+.apvBtn2{
+    position: relative;
+    width: 60px;
+    height: 40px;
+    /* margin: 0px 20px 0px 0px; */
+    /* padding: 0px 12px; */
+    font-size: 14px;
+    border-radius: 6px;
+}
+
 
 
 .apvContent {
