--- a/src/pages/approval/Approval.css
+++ b/src/pages/approval/Approval.css
@@ -459,6 +459,7 @@ section {
     background: #EEEEEE;
     text-align: center;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
     border: 1px solid #7B7B7B;
 }
