#15 시설 카테고리 조회및 시설 인서트 기능 추가

--- a/src/pages/bulletin/Bullentin.module.css
+++ b/src/pages/bulletin/Bullentin.module.css
@@ -43,6 +43,11 @@
   font-size: 16px;
   margin-bottom: 20px;
 }
+.Image{
+  margin-top: 5px;
+  width: 80%;
+  height: 90%;    
+}
 .content_info span{
   margin-right: 10px;
 }
