--- a/src/pages/admin/member/MemberList.module.css
+++ b/src/pages/admin/member/MemberList.module.css
@@ -35,6 +35,7 @@
 }
 
 
+
 .category {
     display: flex;
     font-size: 14px;
@@ -43,17 +44,24 @@
     margin-left: 20px;
     text-align: center;
     border-top: 1px lightgray solid;
-
-    
+    background-color: transparent;
 }
 
+
+.category:hover {
+    background-color: rgba(0, 94, 255, 0.233);;
+    cursor: pointer;
+}
+
+
+.categoryinner {
+    display: contents;
+    width: 1200px;
+}
 
 .category div { 
     width: 180px;    
     align-self: center;
-
-    
-    
 }
 
 .category select { 
