--- a/src/pages/chatting/ChattingRoomList.module.css
+++ b/src/pages/chatting/ChattingRoomList.module.css
@@ -6,7 +6,7 @@
 .chattingRoomLists {
     width: 390px;
     height: 90px;
-    border-bottom: 0.5px solid lightgrey;
+    /* border-bottom: 0.5px solid lightgrey; */
     display: flex;
 }
 
